# carnine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  DebianPackages.txt  README.md  TODO.md  build.sh  logger.sh
cmake/: CMakeFFmpegLibavMacros.cmake  FindFFmpeg.cmake  FindGLIB.cmake  FindGObject.cmake  FindOSMScout.cmake  FindPANGO.cmake  FindPANGOCairo.cmake  FindPANGOFt2.cmake  FindRSvg.cmake  FindSQLITE3.cmake  cppcheckhelper.cmake  systemdService.cmake
documents/: MicroPower.txt  NewSystem2.drawio  SIM7600.md  backend.md  frontend.md  hardware.md  impureThoughts.md  index.md  linux.md  pi.md
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  carnine.service.in  carnine.socket  loggerBackend.conf  main.cpp
src/backend/Config/: BackendConfig.cpp  BackendConfig.hpp
src/backend/Controller/: BackendController.cpp  BackendController.hpp  MountPoint.cpp  MountPoint.hpp  SocketController.cpp  SocketController.hpp  UdevController.cpp  UdevController.hpp
src/backend/communication/: PowerSupply.cpp  PowerSupplySerial.cpp  PowerSupplySerial.hpp
src/backend/messages/: WorkerMessage.cpp  WorkerMessage.hpp
src/common/: CMakeLists.txt  version.hpp.in
src/common/communication/: BaseSerial.cpp  BaseSerial.h  BaseSerial.hpp  CMakeLists.txt
src/common/messages/: BackendMessages.cpp  BackendMessages.hpp  CMakeLists.txt
src/common/utils/: CMakeLists.txt  CommandLineArgs.cpp  CommandLineArgs.hpp  LogNetDispatcher.cpp  LogNetDispatcher.hpp  UdpLogClient.cpp  UdpLogClient.hpp  time-util.cpp  time-util.h
src/frontend/: AppConfig.h  AppEvents.h  CMakeLists.txt  CarNiNeApp.cpp  CarNiNeApp.hpp  logger.conf  main.cpp
src/powersupply/: Infos.txt  compile3.bat  main-org.c
src/powersupply/RaspberryPower/: Makefile  Netzteil-Hapsim.xml  RaspberryPower.c  compile.bat  helper.h  raspberrypower.aws  serial.c  serial.h
tools/SIM7600/: LE11B13SIM7600M22.rar  SIM7500_SIM7600_QDL_V1.41_Only_for_Update.rar  SIM7600X-4G-HAT-Demo.7z
tools/marcus/: DownIt.ini
tools/scripts/: clang-format-all.sh
tools/systemd/: carnine.service  carnine.socket  infos.md
